[package]
name = "isodd"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.66"
tokio = { version = "1.10.0", features = ["full"] }
tracing = "0.1.26"
tracing-subscriber = "0.2.20"
warp = "0.3.1"
